Restore default browser infobar icon to full-color Chrome icon.

Earlier this year the default browser infobar icon was changed to a
stylized blue Chrome icon. This cl, per rpop@, reverts the icon to its
original full-color version.

R=sky@chromium.org
BUG=654340

Review-Url: https://codereview.chromium.org/2537453004
Cr-Commit-Position: refs/heads/master@{#434839}

Former-commit-id: e33fc4517af8fe393a45ae3987b81a246e6ac160